CHANGELOG

2011-02-06  Christopher M. Fuhrman

        * Expand RCS keywords in Makefile.PL

2011-02-05  Christopher M. Fuhrman

        * Just require Sys::Syslog 0.13
        * No longer need META.yml since it's auto-generated for us
        * Let Makefile.PL generate an appropriate META.yml file

2011-02-02  Christopher M. Fuhrman

        * Regen
        * Add installation instructions

2011-01-30  Christopher M. Fuhrman

        * Minor formatting tweaks

2011-01-11  Christopher M. Fuhrman

        * Bump version
        * Close out multi-logger task

2011-01-10  Christopher M. Fuhrman

        * Update
        * Regen
        * perltidy
        * Merge branch 'LOG-UTIL-MULTILOGGER'
        * Code optimizations

2011-01-09  Christopher M. Fuhrman

        * Document new multi-logger functionality
        * Make POD documentation more consistent with perlmodstyle(1)

2011-01-08  Christopher M. Fuhrman

        * Clean up code
        * Store copy of Log::Fine object

2011-01-07  Christopher M. Fuhrman

        * Make sure filehandle is open
        * Update TODO with Utils task information
        * Initial stab at having Utils support multiple loggers
        * Add support for listing defined logger objects
        * Brainstorm additional ideas

2011-01-06  Christopher M. Fuhrman

        * Ignore files generated by perltidy and 'make clean'
        * Add support for variable-precision high-resolution timestamps
        * Properly handle space at beginning of line caused by certain locales
        * Bump Version
        * Bump Version
        * Bump Version

2011-01-03  Christopher M. Fuhrman

        * Happy New Years!  Bump copyright year as appropriate
        * Correct invocation to _fatal()
        * Add some thoughts on extending Utils
        * Clarify _fatal() documentation

2011-01-02  Christopher M. Fuhrman

        * Spacing
        * Use _fatal() for croaking

2010-12-31  Christopher M. Fuhrman

        * Bump version